force-app/main/default/objects/EmailGeneratorSettings__mdt/EmailGeneratorSettings__mdt.object-meta.xml
<CustomObject>
    <label>Email Generator Settings</label>
    <pluralLabel>Email Generator Settings</pluralLabel>
    <description>Settings for the Email Generator component</description>
</CustomObject> 