force-app/main/default/objects/EmailGeneratorSettings__mdt/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>The endpoint URL for the Email Generator API</description>
</CustomField> 