force-app/main/default/objects/EmailGeneratorSettings__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>The API key for authentication with the Email Generator API</description>
</CustomField> 