force-app/main/default/objects/EmailGeneratorSettings__mdt/fields/Timeout_ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_ms__c</fullName>
    <defaultValue>30000</defaultValue>
    <label>Timeout (ms)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <description>The timeout in milliseconds for API calls</description>
</CustomField> 